--- a/src/pages/content/style.css
+++ b/src/pages/content/style.css
@@ -1,38 +1,29 @@
-.my-btn {
-  background-color: #4caf50;
+.new-drawer {
   position: absolute;
   position: fixed;
-  top: 20%;
-  right: 0;
-  z-index: 999;
+  right: -300px;
+  top: 25%;
+  width: 300px;
+  height: 400px;
+  background-color: #aaa;
+  border-radius: 20px 20px 20px 0;
+  z-index: 995;
+  transition: transform 0.3s ease-out;
+}
+
+.thumb {
+  position: absolute;
+  position: fixed;
+  right: 0px;
+  top: calc(25% + 150px);
   width: 50px;
   height: 250px;
+  background-color: #000;
   border-radius: 15px 0 0 15px;
-  border: none;
-  cursor: not-allowed;
+  z-index: 996;
+  transition: transform 0.3s ease-out;
 }
-.close-btn {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 10px;
-  height: 10px;
-  border: none;
-}
-.my-drawer {
-  position: absolute;
-  position: fixed;
-  top: 20%;
-  right: 0;
-  width: 0px;
-  height: 50%;
-  background-color: #46f000;
-  overflow: hidden;
-  z-index: 999;
-}
-.open {
-  width: 300px;
-}
-.hidden {
-  display: none;
+
+.slide-in {
+  transform: translateX(-300px);
 }
