--- a/src/pages/content/style.css
+++ b/src/pages/content/style.css
@@ -2,10 +2,10 @@
   position: absolute;
   position: fixed;
   right: -300px;
-  top: 25%;
+  top: 20%;
   width: 300px;
-  height: 400px;
-  background-color: #aaa;
+  height: 500px;
+  background-color: #4b67ba;
   border-radius: 20px 20px 20px 0;
   z-index: 995;
   transition: transform 0.3s ease-out;
@@ -15,10 +15,10 @@
   position: absolute;
   position: fixed;
   right: 0px;
-  top: calc(25% + 150px);
+  top: calc(20% + 250px);
   width: 50px;
   height: 250px;
-  background-color: #000;
+  background-color: #4b67ba;
   border-radius: 15px 0 0 15px;
   z-index: 996;
   transition: transform 0.3s ease-out;
